--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.12"
 dependencies = [
     "uvicorn (>=0.37.0,<0.38.0)",
     "fastapi (>=0.118.3,<0.119.0)",
-    "aiogram (>=3.22.0,<4.0.0)"
+    "aiogram (>=3.22.0,<4.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "pydantic-settings (>=2.11.0,<3.0.0)"
 ]
 
 
