--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "aiogram (>=3.22.0,<4.0.0)",
     "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "pydantic-settings (>=2.11.0,<3.0.0)"
+    "pydantic-settings (>=2.11.0,<3.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 
